[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-updater = { version = "2.0.0-beta", features = [] }
discord-rich-presence = "0.2.3"
lazy_static = "1.4.0"
anyhow = "1.0.79"
base64 = "0.13.0"
# tauri-plugin-autostart = "2.0.0-beta"
tauri-plugin-shell = "2.0.0-beta"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
# desktop only dependencies
tauri-plugin-autostart = "2.0.0-beta"
tauri-plugin-updater = "2.0.0-beta"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

